--- a/src/form.html
+++ b/src/form.html
@@ -1,39 +1,75 @@
 <html>
   <body>
     <form>
+      Enter a question no: <input type="text" name="id" /><br /><br />
       Enter a question: <input type="text" name="question_text" /><br /><br />
       Enter choice 1: <input type="text" name="choice_one" /><br /><br />
       Enter choice 2: <input type="text" name="choice_two" /><br /><br />
       Enter choice 3: <input type="text" name="choice_three" /><br /><br />
       Enter choice 4: <input type="text" name="choice_four" /><br /><br />
       Correct option: <input type="text" name="correct_choice" /><br /><br />
-      <input type="button" value="submit" onclick="formsubmit()" />
-      <input type="reset" value="reset" />
     </form>
-    <div name="display section">
-      <div>Question here</div>
-      <div>option 1</div>
-      <div>option 2</div>
-      <div>option 3</div>
-      <div>option 4</div>
-    </div>
   </body>
+  <input type="button" value="submit" onclick="formsubmit()" />
+  <input type="button" value="add question" onclick="add_question()" />
+  <input type="reset" value="reset" />
+  <input type="button" value="View data" onclick="getvalues()" />
+  <div>
+
+  </div>
   <script>
+    function add_question() {
+      const parent = document.querySelector("body");
+      parent.insertAdjacentHTML(
+        "beforeend",
+        `<form>
+      Enter a question no: <input type="text" name="id" /><br /><br />
+      Enter a question: <input type="text" name="question_text" /><br /><br />
+      Enter choice 1: <input type="text" name="choice_one" /><br /><br />
+      Enter choice 2: <input type="text" name="choice_two" /><br /><br />
+      Enter choice 3: <input type="text" name="choice_three" /><br /><br />
+      Enter choice 4: <input type="text" name="choice_four" /><br /><br />
+      Correct option: <input type="text" name="correct_choice" /><br /><br />
+    </form>`
+      );
+    }
+
+    var mainobj = [];
     function formsubmit() {
-      const form = document.querySelector("form");
-      const formData = new FormData(form);
-      var object = {};
-      formData.forEach(function (value, key) {
-        object[key] = value;
+      var i = 0;
+      const form = document.querySelectorAll("form");
+      form.forEach(function contstruct(form) {
+        const formData = new FormData(form);
+        var object = {};
+        formData.forEach(function (value, key) {
+          object[key] = value;
+        });
+        mainobj[i] = object;
+        i++;
       });
-      var json = JSON.stringify(object);
+      var newmain = JSON.stringify({ qset: mainobj });
+      console.log(newmain);
       fetch("http://localhost:8000/questions", {
         method: "POST",
-        body: json,
+        body: newmain,
         headers: { "Content-Type": "application/json" },
       }).then((response) => {
         console.log(response);
       });
+    }
+
+    function getvalues() {
+      const d = document.querySelector("div");
+      fetch("http://localhost:8000/view_questions", {
+        method: "GET",
+      })
+        .then((response) => {
+          return response.json();
+        })
+        .then((data) => {
+          
+          data.forEach((d) => console.log(d.question_text))
+        });
     }
   </script>
 </html>
