--- a/src/form.html
+++ b/src/form.html
@@ -18,6 +18,7 @@
   <div>
     <input type="button" value="Submit test" onclick="validate()" />
   </div>
+  <input type="button" value="scroll" onclick="scroll()">
   </body>
   
   <script>
@@ -51,6 +52,8 @@
         i++;
       });
       var newmain = JSON.stringify({ qset: mainobj });
+      console.log(typeof(newmain["qset"]))
+      console.log(newmain);
       fetch("http://localhost:8000/questions", {
         method: "POST",
         body: newmain,
@@ -108,6 +111,10 @@
     function reset(){
       const input=document.querySelectorAll("input[type='text']")
       input.forEach((ip_ele)=> ip_ele.value='')
+    }
+
+    function scoll(){
+      window.scrollBy(2000,200)
     }
   </script>
 </html>
